wtx-macros/tests/ui/error_enum/bad_params.stderr
error: Parameters must end with the `Params` suffix.
 --> tests/ui/error_enum/bad_params.rs:5:14
  |
5 |   pub struct Rfewr;
  |              ^^^^^
